--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,55 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>MyApp</title>
+  <title>Advice App</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <script>
+    (function(d, s, id){
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) {return;}
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/en_US/sdk.js";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));  
+    
+    window.fbAsyncInit = function() {
+      FB.init({
+        appId:   '1491949827760019',
+        xfbml:   true,
+        version: 'v2.2'
+      });
+
+      $('#sign_in').click(function(e){
+        e.preventDefault();
+          FB.login(function(response) {
+            if (response.authResponse) {
+              window.location = '/auth/facebook/callback?' + $.param({signed_request: response.authResponse.signedRequest});
+            } 
+          });
+      });
+        
+      $('#sign_out').click(function(e){
+        FB.getLoginStatus(function(response){
+          if(response.authResponse){
+            FB.logout();
+          }
+        });
+        return true;
+      });
+    };
+  </script>
 </head>
 <body>
-
-<%= yield %>
-
+  <div id="user-widget">
+    <% if current_user %>
+      Welcome <strong><%= current_user.name %></strong>!
+      <%= link_to "Sign out", signout_path, id: "sign_out" %>
+    <% else %>
+      <%= link_to "Sign in with Facebook", "/auth/facebook", id: "sign_in" %>
+    <% end %>
+  </div>
+  <%= yield %>
 </body>
 </html>
