--- a/app/views/advices/index.html.erb
+++ b/app/views/advices/index.html.erb
@@ -1,3 +1,12 @@
 <% @user.advices.each do |advice| %>
-   <p><%=advice.advice_text%>: <%=advice.url%></p>
+   <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img data-src="holder.js/300x300" alt="...">
+      <div class="caption">
+        <h3><%=advice.url%></h3>
+        <p><%=advice.advice_text%></p>
+        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+      </div>
+    </div>
+  </div>
 <%end%>
