--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -72,6 +72,12 @@
       <a class="navbar-brand" href="#">AdviseMe</a>
       
     </div>
+      <form class="navbar-form navbar-left" role="search">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>
       <ul class="nav navbar-nav navbar-right">
         <% if current_user %>
           <p class="navbar-text">Hey there <strong><%= current_user.name %></strong>!</p>
