--- a/app/views/advices/_form.html.erb
+++ b/app/views/advices/_form.html.erb
@@ -1,6 +1,4 @@
-<%= form_for @new_advice, url: user_advices_path do |f| %>
-  <%= f.label :advice_text %>:
-  <%= f.text_field :advice_text %><br />
+<%= form_for @advice do |f| %>
 
   <%= f.label :url %>:
   <%= f.text_field :url %><br />
