deleted vote model and controller

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,10 @@
       <div class="caption">
         <p><%=advice.url%></p>
         <p>Taggs will go here...</p>
-        <p><a class="btn btn-primary btn-worked" role="button">It worked! :)</a> <a href="#" class="btn btn-default btn-didnt-work" role="button">Not so much :(</a></p>
+        <p>
+          <a class="btn btn-primary btn-worked" role="button">It worked! :)</a> 
+          <a href="#" class="btn btn-default btn-didnt-work" role="button">Not so much :(</a>
+        </p>
       </div>
     </div>
   </div>
