tagging functions. Need to deal with repeats

--- a/app/views/advices/_form.html.erb
+++ b/app/views/advices/_form.html.erb
@@ -3,5 +3,8 @@
   <%= f.label :url %>:
   <%= f.text_field :url %><br />
 
+  <%= f.label :tag_list, "Tags (separated by commas)" %>:
+  <%= f.text_field :tag_list %><br />
+
   <%= f.submit %>
 <% end %>
