--- a/app/views/advices/index.html.erb
+++ b/app/views/advices/index.html.erb
@@ -4,7 +4,9 @@
     <div class="thumbnail">
       <div class="caption">
         <p><%=advice.url%></p>
-        <p>Taggs will go here...</p>
+        <p>
+        Tags: <%= raw advice.tag_list.map { |t| link_to t, tag_path(t) }.join(', ') %>
+        </p>
         <p><a class="btn btn-primary btn-worked" role="button">It worked! :)</a> <a href="#" class="btn btn-default btn-didnt-work" role="button">Not so much :(</a></p>
       </div>
     </div>
