--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,29 +6,7 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-  <script>
-  $(document).ready(function(){
-    $(".btn-worked").click(function(e){
-      $this = $(this);
-      $.ajax({
-        type: "POST",
-        url:"/upvotes", 
-        success:function(result){
-        $this.text("YES!");
-      }});
-    });
 
-    $(".btn-didnt-work").click(function(e){
-      $this = $(this);
-      $.ajax({
-        type: "POST",
-        url:"/upvotes", 
-        success:function(result){
-        $this.text("NOPE!");
-      }});
-    });
-  });
-  </script>
   <script>
     (function(d, s, id){
       var js, fjs = d.getElementsByTagName(s)[0];
@@ -66,18 +44,19 @@
   </script>
 </head>
 <body>
+  
   <nav class="navbar navbar-default" role="navigation">
-  <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">AdviseMe</a>
-      
+      <a class="navbar-brand" href="#">AdviseMe</a>  
     </div>
+
       <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
+
       <ul class="nav navbar-nav navbar-right">
         <% if current_user %>
           <p class="navbar-text">Hey there <strong><%= current_user.name %></strong>!</p>
@@ -87,9 +66,11 @@
         <% end %>
       </ul>
     </div>
+  </nav>
+  <div class="container-fluid">
+  <div class="row">
+    <%= yield %>
   </div>
-</nav>
-
-  <%= yield %>
+  </div>
 </body>
 </html>
