--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -72,9 +72,9 @@
       <a class="navbar-brand" href="#">AdviseMe</a>
       
     </div>
-      <form class="navbar-form navbar-left" role="search">
+      <form action="/advices" method="get" class="navbar-form navbar-left" role="search">
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
+          <input name="tag" type="text" class="form-control" placeholder="Search">
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
