moved js logging in stuff from application.html.erb to sessions.js

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,8 +8,8 @@
 <% advice.user_advices.each do |user_advice| %>
   <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <div class="caption" data-advice-id='<%= advice.id %>'>
-        <p><%=advice.url%></p>
+      <div class="caption" data-advice-id='<%= advice.id %>' data-user-advice-id='<%= user_advice.id %>'>
+        <p><%= advice.url %></p>
         <p>Taggs will go here...</p>
         <p>
           <a class="btn btn-primary btn-worked" role="button">It worked! :)</a> 
