url_title functionality almost complete

--- a/app/views/advices/index.html.erb
+++ b/app/views/advices/index.html.erb
@@ -1,3 +1,11 @@
+<div class="col-sm-6 col-md-4">
+  <div class="thumbnail">
+    <div class="caption">
+      <%= render 'form' %>
+    </div>
+  </div>
+</div>
+
 <% @advices.each do |advice| %>
   <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
