--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,18 @@
-<p>User Show HTML ERB</p>
+<div class="col-sm-3">
+  <div class="thumbnail">
+    <div class="caption">
+      <%= render 'form' %>      
+    </div>
+  </div>
+</div>
 
-<%= link_to 'Add Advice', new_advice_path %>
 
 <% @user.advices.each do |advice| %>
-  <div class="col-sm-6 col-md-4">
+  <div class="col-sm-3">
     <div class="thumbnail">
       <div class="caption">
         <p><%=advice.url%></p>
+        <p><%=advice.url_title%></p>
         <p>
         Tags: <%= raw advice.tag_list.map { |t| link_to t, advices_path(t) }.join(', ') %>
         </p>
