--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,33 +8,38 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 </head>
 <body>
-  
-  <nav class="navbar navbar-default" role="navigation">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">AdviseMe</a>  
-    </div>
-
-      <form class="navbar-form navbar-left" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
-
-      <ul class="nav navbar-nav navbar-right">
-        <% if current_user %>
-          <p class="navbar-text">Hey there <strong><%= current_user.name %></strong>!</p>
-          <li><%= link_to "Sign out", signout_path, id: "sign_out" %></li>
-        <% else %>
-          <li><%= link_to "Sign in with Facebook", "/auth/facebook", id: "sign_in" %></li>
-        <% end %>
-      </ul>
-    </div>
-  </nav>
   <div class="container-fluid">
-  <div class="row">
-    <%= yield %>
-  </div>
+    <div class="row">
+      <div class="col-md-12">
+      <nav class="navbar navbar-default" role="navigation">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">AdviseMe</a>  
+        </div>
+
+          <form class="navbar-form navbar-left" role="search">
+            <div class="form-group">
+              <input type="text" class="form-control" placeholder="Search">
+            </div>
+            <button type="submit" class="btn btn-default">Submit</button>
+          </form>
+
+          <ul class="nav navbar-nav navbar-right">
+            <% if current_user %>
+              <p class="navbar-text">Hey there <strong><%= current_user.name %></strong>!</p>
+              <li><%= link_to "Sign out", signout_path, id: "sign_out" %></li>
+            <% else %>
+              <li><%= link_to "Sign in with Facebook", "/auth/facebook", id: "sign_in" %></li>
+            <% end %>
+          </ul>
+        </div>
+      </nav>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+      <%= yield %>
+      </div>
+    </div>
   </div>
 </body>
 </html>
