--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,20 +10,9 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require_tree .
  *= require_self
+ *= require_tree .
  */
 
-body {
-  margin-top: 50px;
-  margin-bottom: 50px;
-  background: none;
-}
-
-.full {
-  background: url(http://placehold.it/1920x1080) no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
+@import "bootstrap-sprockets";
+@import "bootstrap";
