--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,37 @@
+<div class="container-fluid">
+    <div class="row">
+      <div class="col-md-12">
+      <nav class="navbar navbar-default" role="navigation">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">AdviseMe</a>  
+        </div>
+
+          <form class="navbar-form navbar-left" role="search">
+            <div class="form-group">
+              <input type="text" class="form-control" placeholder="Search">
+            </div>
+            <button type="submit" class="btn btn-default">Submit</button>
+          </form>
+
+          <ul class="nav navbar-nav navbar-right">
+            <% if current_user %>
+              <p class="navbar-text">Hey there <strong><%= current_user.name %></strong>!</p>
+              <li><%= link_to "Sign out", signout_path, id: "sign_out" %></li>
+            <% else %>
+              <li><%= link_to "Sign in with Facebook", "/auth/facebook", id: "sign_in" %></li>
+            <% end %>
+          </ul>
+        </div>
+      </nav>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+      <%= yield %>
+      </div>
+    </div>
+  </div>
+
 <p>User Show HTML ERB</p>
 
 <div class="col-md-12">
