fixed user show page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,7 +12,10 @@
  *
  *= require_self
  *= require_tree .
+ *= require starter-template
  *= require cover
+
+
  */
 
 @import "bootstrap-sprockets";
