--- a/app/views/layouts/_cover.html.erb
+++ b/app/views/layouts/_cover.html.erb
@@ -18,14 +18,7 @@
             </div>
           </div>
           
-            <div class="inner cover">
-            <h1 class="cover-heading">Advice App</h1>
-              <p class="lead">Yey OR Nay</p>
-              <p class="lead">
-                <%= link_to "Sign in with Facebook", "/auth/facebook", id: "sign_in", :class => "btn btn-lg btn-default", :popup => true %>
-              </div>
-              </p>
-            </div>
+            <%= yield %>
 
           <div class="mastfoot">
             <div class="inner">
