deleted unneccessary files

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,7 +23,7 @@
                 <p><%= advice.url %></p>
                 <p>Taggs will go here...</p>
                 <p>
-                  <a href='users/<%= @user.id %>/user_advices/<%=user_advice.id %>' data-method='post' class="btn btn-primary btn-worked" role="button">It worked! :)</a> 
+                  <a href='<%= @user.id %>/user_advices/<%=user_advice.id %>' data-method='post' class="btn btn-primary btn-worked" role="button">It worked! :)</a> 
                   <a href="#" class="btn btn-default btn-didnt-work" role="button">Not so much :(</a>
                 </p>
               </div>
