--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,7 +15,7 @@
 </div>
 
 <div class='row wrapper'>
-  <% @user.advices.order('created_at DESC').each do |advice| %>
+  <% @advices.each do |advice| %>
     <% advice.user_advices.each do |user_advice| %>
       <div class='col=md-2'>
       </div>
@@ -25,8 +25,8 @@
             <h3><%= advice.create_url_title(advice.url) %></h3>
             <p><%=link_to advice.url, advice.url %></p>
             <p>Taggs will go here...</p>
-            <p><%= link_to 'It worked ;)', user_user_advices_path(@user.id, user_advice.id), :class => 'btn btn-primary btn-worked', :role => 'button' %>
-              <a href="#" class="btn btn-default btn-didnt-work" role="button">Not so much :(</a>
+            <p><%= link_to 'It worked ;)', user_user_advice_path(@user.id, user_advice), :class => 'btn btn-primary btn-worked', :role => 'button' %>
+              <%= link_to 'Not so much :(', user_user_advices_path(@user.id, user_advice), :class => 'btn btn-primary btn-worked', :role => 'button' %>
             </p>
           </div>
         </div>
