--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,8 +25,8 @@
             <h3><%= advice.create_url_title(advice.url) %></h3>
             <p><%=link_to advice.url, advice.url %></p>
             <p>Taggs will go here...</p>
-            <p><%= link_to 'It worked ;)', user_user_advice_path(@user.id, user_advice), :class => 'btn btn-primary btn-worked', :role => 'button' %>
-              <%= link_to 'Not so much :(', user_user_advices_path(@user.id, user_advice), :class => 'btn btn-primary btn-worked', :role => 'button' %>
+            <p><%= link_to 'It worked ;)', user_user_advice_path(@user.id, user_advice), :class => 'btn btn-primary btn-yes', :role => 'button' %>
+              <%= link_to 'Not so much :(', user_user_advices_path(@user.id, user_advice), :class => 'btn btn-primary btn-no', :role => 'button' %>
             </p>
           </div>
         </div>
