--- a/app/views/advices/_form.html.erb
+++ b/app/views/advices/_form.html.erb
@@ -1,10 +1,11 @@
-<%= form_for @advice do |f| %>
-
-  <%= f.label :url %>:
-  <%= f.text_field :url %><br />
-
-  <%= f.label :tag_list, "Tags (separated by commas)" %>:
-  <%= f.text_field :tag_list %><br />
-
-  <%= f.submit %>
+<%= form_for @advice, :html => {:role => 'form'} do |f| %>
+  <div class='form-group has-error'>
+    <%= f.label :url, 'url:' %>
+    <%= f.text_field :url, :autofocus => true, :placeholder => 'enter url', :style => 'color: black' %>
+  </div>
+  <div class='form-group has-error'>
+    <%= f.label :tag_list, "tags:" %>
+    <%= f.text_field :tag_list, :placeholder => 'separated by commas', :style => 'color: black' %>
+  </div>
+  <%= f.submit :class => 'btn btn-default' %>
 <% end %>
