yes button is persisted

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,3 +1,15 @@
 .btn-default{
-  background-color: 'pink';
+  background-color: #FFC0CB;
 }
+
+input, button, select, textarea {
+    color: #000000;
+}
+
+.greybtn{
+  background-color: #D9D9D9;   
+}
+
+/*.url a {
+  color: #333333;
+}*/
