--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -29,6 +29,14 @@
                 <%= link_to 'NO', :class => 'btn btn-primary btn-no', :role => 'button' %></p>
               <% end %>
             </div>
+            <div class='percentage'>
+                <p>
+     
+          
+
+
+                </p>
+            </div>
           </div>
         </div>
       </div>
