--- a/app/views/user_advices/update.js.erb
+++ b/app/views/user_advices/update.js.erb
@@ -3,17 +3,20 @@
 
   $('div[data-user-advice-id="' + <%= @user_advice.id %> + '"]').find('.btn-no').text('Not so much :(');
 
-  // $('div[data-user-advice-id="' + <%= @user_advice.id %> + '"]').find('.btn-no').css({'background':'grey'}).fadeTo('slow', .30)
+  $('div[data-user-advice-id="' + <%= @user_advice.id %> + '"]').find('.btn-no').css({'background':'grey'}).fadeTo('slow', .30)
   
-  // $('div[data-user-advice-id="' + <%= @user_advice.id %> + '"]').find('.btn-no').addClass('.greybtn');
-  // $('div[data-user-advice-id="' + <%= @user_advice.id %> + '"]').find('.btn-yes').removeClass('.greybtn');
+  $('div[data-user-advice-id="' + <%= @user_advice.id %> + '"]').find('.btn-no').addClass('.greybtn');
+  $('div[data-user-advice-id="' + <%= @user_advice.id %> + '"]').find('.btn-yes').removeClass('.greybtn');
+  //remove the method post attr
+  $('div[data-user-advice-id="' + <%= @user_advice.id %> + '"]').find('.btn-yes').removeAttr('data-method')
+
 <% else %>
   $('div[data-user-advice-id="' + <%= @user_advice.id %> + '"]').find('.btn-no').text('NO');
   $('div[data-user-advice-id="' + <%= @user_advice.id %> + '"]').find('.btn-yes').text('It worked :)');
 
-  // $('div[data-user-advice-id="' + <%= @user_advice.id %> + '"]').find('.btn-yes').css({'background':'grey'}).fadeTo('slow', .30)
+  $('div[data-user-advice-id="' + <%= @user_advice.id %> + '"]').find('.btn-yes').css({'background':'grey'}).fadeTo('slow', .30)
   
-  // $('div[data-user-advice-id="' + <%= @user_advice.id %> + '"]').find('.btn-no').removeClass('.greybtn');
-  // $('div[data-user-advice-id="' + <%= @user_advice.id %> + '"]').find('.btn-yes').addClass('.greybtn');
-                                                                                        
+  $('div[data-user-advice-id="' + <%= @user_advice.id %> + '"]').find('.btn-no').removeClass('.greybtn');
+  $('div[data-user-advice-id="' + <%= @user_advice.id %> + '"]').find('.btn-yes').addClass('.greybtn');
+  $('div[data-user-advice-id="' + <%= @user_advice.id %> + '"]').find('.btn-no').attr('data-method', 'post')                                                                                   
 <% end %>
