--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -10,6 +10,6 @@ input, button, select, textarea {
   background-color: #D9D9D9;   
 }
 
-/*.url a {
-  color: #333333;
-}*/
+.url a {
+  color: #E54E95;
+}
