--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,7 +18,9 @@
           <div class="caption">
             <h3><%= advice.create_url_title(advice.url) %></h3>
             <p class='url'><%=link_to advice.url, advice.url %></p>
+            <div class='tags'>
             <p>Tags: <%= raw advice.tag_list.map { |t| link_to t,  "/advices?tag=#{t}" }.join(', ') %></p>
+            </div>
             <div class='vote-btns'>
               <p>
               <% if user_advice.upvote == true %>
