button styling on first click

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -10,6 +10,10 @@ input, button, select, textarea {
   background-color: #D9D9D9;   
 }
 
+.bluebtn{
+  background-color: #337AB7;
+}
+
 .url a{
   color: #E54E95;
 }
