--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,9 @@
 <%= render 'layouts/header' %>
+<div class='row'>
+  <div class='col-md-4 col-md-offset-8'>
+  <%=link_to 'Link to All Advices', advices_path %>
+  </div>
+<div>
 
 <div class="row">
   <div>
