--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Advice App</a>
+          <%= link_to 'Advice App', advices_path, :class => 'navbar-brand' %>
         </div>
           <form action="/advices" method="get" class="navbar-form navbar-left" role="search">
           <div class="form-group">
